--- a/style.css
+++ b/style.css
@@ -34,11 +34,12 @@ body {
     cursor: pointer;
     line-height: 100px;
     font-size: 60px;
+    background-color: red;
   }
   
   .piscar {
+    background-color: rgb(251, 254, 254) !important;
     animation: piscar 1s infinite;
-    background-color: rgb(251, 254, 254);
     width: 100px;
     font-size: 60px;
     font-family: "Permanent Marker", cursive;
